# fib

./: .gitignore  CMakeLists.txt  README.md  package.json
.github/workflows/: cmake-multi-platform.yml
include/: fib.h  main.h
src/: fib.cpp  main.cpp
